# mapa_eleicoes_2018_v2

./: README.md  mapa_eleicoes_2018_2turno.ipynb  mapa_eleicoes_2018_2turno_dask.ipynb  mapa_eleicoes_2018_2turno_dask_apenas_criacao.ipynb  mapa_eleicoes_2018_2turno_pandas.ipynb  mapa_eleicoes_2018_2turno_pandas_apenas_criacao.ipynb  pyproject.toml  requirements.txt
