[project]
name = "mapa-eleicoes-2018-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Vasselai",email = "mvasselai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "dask (>=2025.3.0,<2026.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "times (>=0.7,<0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
